# phelia-plugins

./: readme.md
phelia-jackett/: pyproject.toml  readme.md
